add: task router, update swagger docs
