# docs/swagger.json
@@ -17,6 +17,66 @@
     "host": "localhost:8888",
     "basePath": "/",
     "paths": {
+        "/group": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Group (다운 타이머)"
+                ],
+                "summary": "그룹 생성하기",
+                "responses": {}
+            }
+        },
+        "/groups": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Group (다운 타이머)"
+                ],
+                "summary": "그룹 조회하기",
+                "responses": {}
+            }
+        },
+        "/task": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "ToDo (Task)"
+                ],
+                "summary": "할일 생성하기",
+                "responses": {}
+            }
+        },
+        "/tasks": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "ToDo (Task)"
+                ],
+                "summary": "아무 조건 없이 모든 Task 불러오기",
+                "responses": {}
+            }
+        },
         "/user": {
             "post": {
                 "consumes": [
@@ -26,7 +86,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "user"
+                    "User"
                 ],
                 "summary": "유저 생성하기",
                 "responses": {}
@@ -41,7 +101,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "user"
+                    "User"
                 ],
                 "summary": "유저 ID 로 조회하기",
                 "responses": {}
@@ -56,9 +116,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "user"
+                    "User"
                 ],
-                "summary": "모든 유저 정보 모두 불러오기",
+                "summary": "아무 조건 없이 모든 User 불러오기",
                 "responses": {}
             }
         }
